# pygeocity

./: .gitignore  MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.py
geonames/: __init__.py
